updating Meta tags

--- a/Barbara.html
+++ b/Barbara.html
@@ -9,6 +9,14 @@
 	<meta name="keywords"  content="" />
 	<meta name="Resource-type" content="Document" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta property="og:title" content="Science World 30th Anniversary | Barbara Brink">
+	<meta property="og:description" content="For Barbara Brink, founding CEO and Chair of Science World, the organization has always been about much more than putting on exhibits.">
+	<meta property="og:image" content="images/barbara_thumb.png">
+	<meta property="og:url" content="https://www.30yearsofwonder.com/Barbara.html">
+	<meta name="twitter:title" content="Science World 30th Anniversary | Barbara Brink">
+	<meta name="twitter:description" content="For Barbara Brink, founding CEO and Chair of Science World, the organization has always been about much more than putting on exhibits.">
+	<meta name="twitter:image" content="images/barbara_thumb.png">
+	<meta name="twitter:card" content="summary_large_image">
 	<!-- CSS -->
 	<link href="font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" media="all">
 	<link href='https://fonts.googleapis.com/css?family=Lato:400,700,900' rel='stylesheet' type='text/css'>
