--- a/Cybele.html
+++ b/Cybele.html
@@ -8,6 +8,14 @@
 	<meta name="description" content="Cybele Negris, a member of Science World’s Chair’s Council, is helping to ignite a passion for science in young girls" />
 	<meta name="Resource-type" content="Document" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta property="og:title" content="Science World 30th Anniversary | Cybele Negris">
+	<meta property="og:description" content="Cybele Negris, a member of Science World’s Chair’s Council, is helping to ignite a passion for science in young girls.">
+	<meta property="og:image" content="images/cybele_thumb.png">
+	<meta property="og:url" content="https://www.30yearsofwonder.com/Cybele.html">
+	<meta name="twitter:title" content="Science World 30th Anniversary | Cybele Negris">
+	<meta name="twitter:description" content="Cybele Negris, a member of Science World’s Chair’s Council, is helping to ignite a passion for science in young girls.">
+	<meta name="twitter:image" content="images/cybele_thumb.png">
+	<meta name="twitter:card" content="summary_large_image">
 	<!-- CSS -->
 	<link href="font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" media="all">
 	<link href='https://fonts.googleapis.com/css?family=Lato:400,700,900' rel='stylesheet' type='text/css'>
