--- a/Haig.html
+++ b/Haig.html
@@ -9,6 +9,14 @@
 	<meta name="keywords"  content="" />
 	<meta name="Resource-type" content="Document" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta property="og:title" content="Science World 30th Anniversary | Haig Farris">
+	<meta property="og:description" content="Venture capitalist Haig Farris, who was pivotal in securing funding for Science World 30 years ago, is seeing his decades-long efforts paying off in Vancouver’s thriving tech community.">
+	<meta property="og:image" content="images/haig_thumb.png">
+	<meta property="og:url" content="https://www.30yearsofwonder.com/Haig.html">
+	<meta name="twitter:title" content="Science World 30th Anniversary | Haig Farris">
+	<meta name="twitter:description" content="Venture capitalist Haig Farris, who was pivotal in securing funding for Science World 30 years ago, is seeing his decades-long efforts paying off in Vancouver’s thriving tech community.">
+	<meta name="twitter:image" content="images/haig_thumb.png">
+	<meta name="twitter:card" content="summary_large_image">
 	<!-- CSS -->
 	<link href="font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" media="all">
 	<link href='https://fonts.googleapis.com/css?family=Lato:400,700,900' rel='stylesheet' type='text/css'>
