--- a/Jim.html
+++ b/Jim.html
@@ -6,9 +6,16 @@
 	<title>Science World 30th Anniversary | Jim Pattison</title>
 	<meta name="author" content="" />
 	<meta name="description" content="B.C. business legend Jim Pattison, who helped deliver Expo 86 and change the province forever, sees a bright future for one of Expo’s greatest legacies: Science World" />
-	<meta name="keywords"  content="" />
 	<meta name="Resource-type" content="Document" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta property="og:title" content="Science World 30th Anniversary | Jim Pattison">
+	<meta property="og:description" content="B.C. business legend Jim Pattison, who helped deliver Expo 86 and change the province forever, sees a bright future for one of Expo’s greatest legacies: Science World.">
+	<meta property="og:image" content="images/jim_thumb.png">
+	<meta property="og:url" content="https://www.30yearsofwonder.com/Jim.html">
+	<meta name="twitter:title" content="Science World 30th Anniversary | Jim Pattison">
+	<meta name="twitter:description" content="B.C. business legend Jim Pattison, who helped deliver Expo 86 and change the province forever, sees a bright future for one of Expo’s greatest legacies: Science World.">
+	<meta name="twitter:image" content="images/jim_thumb.png">
+	<meta name="twitter:card" content="summary_large_image">
 	<!-- CSS -->
 	<link href="font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" media="all">
 	<link href='https://fonts.googleapis.com/css?family=Lato:400,700,900' rel='stylesheet' type='text/css'>
