--- a/Paige.html
+++ b/Paige.html
@@ -9,6 +9,14 @@
 	<meta name="keywords"  content="" />
 	<meta name="Resource-type" content="Document" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta property="og:title" content="Science World 30th Anniversary | Paige Zheng">
+	<meta property="og:description" content="A resident psychiatrist at St Paul’s Hospital, credits her time as a Science World intern with inspiring her to pursue a career in science.">
+	<meta property="og:image" content="images/paige_thumb.png">
+	<meta property="og:url" content="https://www.30yearsofwonder.com/Paige.html">
+	<meta name="twitter:title" content="Science World 30th Anniversary | Paige Zheng">
+	<meta name="twitter:description" content="A resident psychiatrist at St Paul’s Hospital, credits her time as a Science World intern with inspiring her to pursue a career in science.">
+	<meta name="twitter:image" content="images/paige_thumb.png">
+	<meta name="twitter:card" content="summary_large_image">
 	<!-- CSS -->
 	<link href="font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" media="all">
 	<link href='https://fonts.googleapis.com/css?family=Lato:400,700,900' rel='stylesheet' type='text/css'>
