--- a/Rob.html
+++ b/Rob.html
@@ -6,9 +6,16 @@
 	<title>Science World 30th Anniversary | Rob Lunde</title>
 	<meta name="author" content="Science World" />
 	<meta name="description" content="Whether curating Science World’s biggest exhibits or hosting the biggest celebrities, Rob Lunde is consistently focused on making science stick in the minds of his audience through emotional connections" />
-	<meta name="keywords"  content="" />
 	<meta name="Resource-type" content="Document" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta property="og:title" content="Science World 30th Anniversary | Rob Lunde">
+	<meta property="og:description" content="Whether curating Science World’s biggest exhibits or hosting the biggest celebrities, Rob Lunde is consistently focused on making science stick in the minds of his audience through emotional connections">
+	<meta property="og:image" content="images/rob_thumb.png">
+	<meta property="og:url" content="https://www.30yearsofwonder.com/Rob.html">
+	<meta name="twitter:title" content="Science World 30th Anniversary | Rob Lunde">
+	<meta name="twitter:description" content="Whether curating Science World’s biggest exhibits or hosting the biggest celebrities, Rob Lunde is consistently focused on making science stick in the minds of his audience through emotional connections">
+	<meta name="twitter:image" content="images/rob_thumb.png">
+	<meta name="twitter:card" content="summary_large_image">
 	<!-- CSS -->
 	<link href="font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" media="all">
 	<link href='https://fonts.googleapis.com/css?family=Lato:400,700,900' rel='stylesheet' type='text/css'>
