--- a/history.html
+++ b/history.html
@@ -3,12 +3,29 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>Science World 30th Anniversary</title>
+	<title>Science World History</title>
 	<meta name="author" content="" />
-	<meta name="description" content="" />
+	<meta name="description" content="—On May 6, Science World celebrates 30 years of wonder at TELUS World of Science,
+having served over 18 million people over the past three decades. Vancouver’s iconic geodesic dome
+opened its doors in 1989, featuring a fully refurbished 10,200 square-meter science centre with dozens
+of hands-on exhibits and the largest OMNIMAX® dome screen in the world." />
 	<meta name="keywords"  content="" />
 	<meta name="Resource-type" content="Document" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta property="og:title" content="Science World History">
+	<meta property="og:description" content="—On May 6, Science World celebrates 30 years of wonder at TELUS World of Science,
+having served over 18 million people over the past three decades. Vancouver’s iconic geodesic dome
+opened its doors in 1989, featuring a fully refurbished 10,200 square-meter science centre with dozens
+of hands-on exhibits and the largest OMNIMAX® dome screen in the world.">
+	<meta property="og:image" content="images/history_thumb.png">
+	<meta property="og:url" content="https://www.30yearsofwonder.com/history.html">
+	<meta name="twitter:title" content="Science World History">
+	<meta name="twitter:description" content="—On May 6, Science World celebrates 30 years of wonder at TELUS World of Science,
+having served over 18 million people over the past three decades. Vancouver’s iconic geodesic dome
+opened its doors in 1989, featuring a fully refurbished 10,200 square-meter science centre with dozens
+of hands-on exhibits and the largest OMNIMAX® dome screen in the world.">
+	<meta name="twitter:image" content="images/history_thumb.png">
+	<meta name="twitter:card" content="summary_large_image">
 	<!-- CSS -->
 	<link href="font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" media="all">
 	<link href='https://fonts.googleapis.com/css?family=Lato:400,700,900' rel='stylesheet' type='text/css'>
