--- a/index.html
+++ b/index.html
@@ -5,10 +5,20 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>Science World 30th Anniversary</title>
 	<meta name="author" content="" />
-	<meta name="description" content="" />
-	<meta name="keywords"  content="" />
+	<meta name="description" content="Bringing STEAM Learning Opportunities to the People of British Columbia for Three Decades, Science World
+Celebrates 30 Years Under the Dome and Across the Province." />
 	<meta name="Resource-type" content="Document" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta property="og:title" content="Science World 30th Anniversary">
+	<meta property="og:description" content="Bringing STEAM Learning Opportunities to the People of British Columbia for Three Decades, Science World
+Celebrates 30 Years Under the Dome and Across the Province.">
+	<meta property="og:image" content="images/30th_thumb.png">
+	<meta property="og:url" content="https://www.30yearsofwonder.com">
+	<meta name="twitter:title" content="Science World 30th Anniversary">
+	<meta name="twitter:description" content="Bringing STEAM Learning Opportunities to the People of British Columbia for Three Decades, Science World
+Celebrates 30 Years Under the Dome and Across the Province.">
+	<meta name="twitter:image" content="images/30th_thumb.png">
+	<meta name="twitter:card" content="summary_large_image">
 	<!-- CSS -->
 	<link href="font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" media="all">
 	<link href='https://fonts.googleapis.com/css?family=Lato:400,700,900' rel='stylesheet' type='text/css'>
