--- a/Brown.html
+++ b/Brown.html
@@ -9,6 +9,14 @@
 	<meta name="keywords"  content="" />
 	<meta name="Resource-type" content="Document" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta property="og:title" content="Science World 30th Anniversary | Peter M. Brown">
+	<meta property="og:description" content="Financier Peter M. Brown comes from a long line of city builders who have helped shape Vancouver’s most enduring institutions—including Science World.">
+	<meta property="og:image" content="images/brown_thumb.png">
+	<meta property="og:url" content="https://www.30yearsofwonder.com/Brown.html">
+	<meta name="twitter:title" content="Science World 30th Anniversary | Peter M. Brown">
+	<meta name="twitter:description" content="Financier Peter M. Brown comes from a long line of city builders who have helped shape Vancouver’s most enduring institutions—including Science World.">
+	<meta name="twitter:image" content="images/brown_thumb.png">
+	<meta name="twitter:card" content="summary_large_image">
 	<!-- CSS -->
 	<link href="font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" media="all">
 	<link href='https://fonts.googleapis.com/css?family=Lato:400,700,900' rel='stylesheet' type='text/css'>
