--- a/Launi.html
+++ b/Launi.html
@@ -9,6 +9,14 @@
 	<meta name="keywords"  content="" />
 	<meta name="Resource-type" content="Document" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta property="og:title" content="Science World 30th Anniversary | Launi Skinner">
+	<meta property="og:description" content="CEO of First West Credit Union and chair of the Science World Board, believes that Science World can connect with the leaders of tomorrow in several ways.">
+	<meta property="og:image" content="images/launi_thumb.png">
+	<meta property="og:url" content="https://www.30yearsofwonder.com/Launi.html">
+	<meta name="twitter:title" content="Science World 30th Anniversary | Launi Skinner">
+	<meta name="twitter:description" content="CEO of First West Credit Union and chair of the Science World Board, believes that Science World can connect with the leaders of tomorrow in several ways.">
+	<meta name="twitter:image" content="images/launi_thumb.png">
+	<meta name="twitter:card" content="summary_large_image">
 	<!-- CSS -->
 	<link href="font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" media="all">
 	<link href='https://fonts.googleapis.com/css?family=Lato:400,700,900' rel='stylesheet' type='text/css'>
