--- a/Lees.html
+++ b/Lees.html
@@ -6,9 +6,16 @@
 	<title>Science World 30th Anniversary | Bob and Lily Lee</title>
 	<meta name="author" content="Science World" />
 	<meta name="description" content="Bob and Lily Lee, two of BC’s philanthropists, believe that creating prosperity starts with making a commitment to education and youth" />
-	<meta name="keywords"  content="" />
 	<meta name="Resource-type" content="Document" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta property="og:title" content="Science World 30th Anniversary | Bob and Lily Lee">
+	<meta property="og:description" content="Bob and Lily Lee, two of BC’s philanthropists, believe that creating prosperity starts with making a commitment to education and youth">
+	<meta property="og:image" content="images/lees_thumb.png">
+	<meta property="og:url" content="https://www.30yearsofwonder.com/Lees.html">
+	<meta name="twitter:title" content="Science World 30th Anniversary | Bob and Lily Lee">
+	<meta name="twitter:description" content="Bob and Lily Lee, two of BC’s philanthropists, believe that creating prosperity starts with making a commitment to education and youth">
+	<meta name="twitter:image" content="images/lees_thumb.png">
+	<meta name="twitter:card" content="summary_large_image">
 	<!-- CSS -->
 	<link href="font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" media="all">
 	<link href='https://fonts.googleapis.com/css?family=Lato:400,700,900' rel='stylesheet' type='text/css'>
