Adding Alan Winter interview and bottom nav to stories

--- a/Haig.html
+++ b/Haig.html
@@ -98,7 +98,9 @@
 				<p><i>As Science World at TELUS World of Science celebrates our 30th anniversary, we are connecting with people who have made an impact on our physical space and in the community of science enthusiasts and supporters in British Columbia. We present here a selection of their stories, and hope that their words will inspire you to continue to help us ignite wonder and empower dreams for the next generation of STEAM leaders and the people of British Columbia. If you have a story to share about how Science World has impacted your life in a meaningful way, please share it with us online on Twitter, Instagram, or Facebook.
 				</i></p></br></br>
 
-				<a href="index.html#interviews">Back</a>
+				<a href="index.html#interviews" class="button_sub">Back</a></br></br>
+				<a href="Alan.html" class="button_sub">Previous: Alan Winter</a>&nbsp;&nbsp;&nbsp;
+				<a href="Jim.html" class="button_sub">Next: Jim Pattison</a>
 			</div>
 		</div>
 </div>
