--- a/index.html
+++ b/index.html
@@ -153,31 +153,31 @@ Celebrates 30 Years Under the Dome and Across the Province.">
 					<img src="images/slider_03.jpg" alt="slider 03" />
 				</li>
 
-				<!--<li data-target="#thumbnail_image_left_carousel" data-slide-to="3">
-					<img src="images/slider_04.jpg" alt="slider 04" />
-				</li>-->
-
 				<li data-target="#thumbnail_image_left_carousel" data-slide-to="3">
-					<img src="images/slider_05.jpg" alt="slider 05" />
+					<img src="images/slider_04.jpg" alt="slider 04" />
 				</li>
 
 				<li data-target="#thumbnail_image_left_carousel" data-slide-to="4">
-					<img src="images/slider_06.jpg" alt="slider 06" />
+					<img src="images/slider_05.jpg" alt="slider 05" />
 				</li>
 
 				<li data-target="#thumbnail_image_left_carousel" data-slide-to="5">
-					<img src="images/slider_07.jpg" alt="slider 07" />
+					<img src="images/slider_06.jpg" alt="slider 06" />
 				</li>
 
 				<li data-target="#thumbnail_image_left_carousel" data-slide-to="6">
-					<img src="images/slider_08.jpg" alt="slider 08" />
+					<img src="images/slider_07.jpg" alt="slider 07" />
 				</li>
 
 				<li data-target="#thumbnail_image_left_carousel" data-slide-to="7">
-					<img src="images/slider_09.jpg" alt="slider 09" />
+					<img src="images/slider_08.jpg" alt="slider 08" />
 				</li>
 
 				<li data-target="#thumbnail_image_left_carousel" data-slide-to="8">
+					<img src="images/slider_09.jpg" alt="slider 09" />
+				</li>
+
+				<li data-target="#thumbnail_image_left_carousel" data-slide-to="9">
 					<img src="images/slider_10.jpg" alt="slider 10" />
 				</li>
 
@@ -217,9 +217,19 @@ Celebrates 30 Years Under the Dome and Across the Province.">
 					</div>
 				</div>
 
+				<!--========= Forth Slide =========-->
+				<div class="carousel-item">
+					<img src="images/slider_04.jpg" alt="slider 04" />
+					<div class="carousel-caption thumbnail_image_left_carousel_caption">
+						<h1>Alan Winter</h1>
+						<p>B.C. Innovation Commissioner Alan Winter has led some of the province’s top tech institutions, and credits Sputnik — and the wonders of space — for sparking his interest in science</p>
+					</br><a href="Alan.html">Read the Interview</a>
+					</div>
+				</div>
+
 				<!--========= Fifth Slide =========-->
 				<div class="carousel-item">
-					<img src="images/slider_05.jpg" alt="slider 03" />
+					<img src="images/slider_05.jpg" alt="slider 05" />
 					<div class="carousel-caption thumbnail_image_left_carousel_caption">
 						<h1>Haig Farris</h1>
 						<p>Venture capitalist Haig Farris, who was pivotal in securing funding for Science World 30 years ago, is seeing his decades-long efforts paying off in Vancouver’s thriving tech community</p>
@@ -239,7 +249,7 @@ Celebrates 30 Years Under the Dome and Across the Province.">
 
 				<!--========= Seventh Slide =========-->
 				<div class="carousel-item">
-					<img src="images/slider_07.jpg" alt="slider 03" />
+					<img src="images/slider_07.jpg" alt="slider 07" />
 					<div class="carousel-caption thumbnail_image_left_carousel_caption">
 						<h1>Launi Skinner</h1>
 						<p>CEO of First West Credit Union and chair of the Science World Board, believes that Science World can connect with the leaders of tomorrow in several ways</p>
@@ -249,7 +259,7 @@ Celebrates 30 Years Under the Dome and Across the Province.">
 
 				<!--========= Eighth Slide =========-->
 				<div class="carousel-item">
-					<img src="images/slider_08.jpg" alt="slider 03" />
+					<img src="images/slider_08.jpg" alt="slider 08" />
 					<div class="carousel-caption thumbnail_image_left_carousel_caption">
 						<h1>Paige Zheng</h1>
 						<p>A resident psychiatrist at St Paul’s Hospital, credits her time as a Science World intern with inspiring her to pursue a career in science</p>
@@ -259,7 +269,7 @@ Celebrates 30 Years Under the Dome and Across the Province.">
 
 				<!--========= Ninth Slide =========-->
 				<div class="carousel-item">
-					<img src="images/slider_09.jpg" alt="slider 03" />
+					<img src="images/slider_09.jpg" alt="slider 09" />
 					<div class="carousel-caption thumbnail_image_left_carousel_caption">
 						<h1>Rob Lunde</h1>
 						<p>Whether curating Science World’s biggest exhibits or hosting the biggest celebrities, Rob Lunde is consistently focused on making science stick in the minds of his audience through emotional connections</p>
@@ -269,7 +279,7 @@ Celebrates 30 Years Under the Dome and Across the Province.">
 
 				<!--========= Tenth Slide =========-->
 				<div class="carousel-item">
-					<img src="images/slider_10.jpg" alt="slider 03" />
+					<img src="images/slider_10.jpg" alt="slider 10" />
 					<div class="carousel-caption thumbnail_image_left_carousel_caption">
 						<h1>Peter M. Brown</h1>
 						<p>Financier Peter M. Brown comes from a long line of city builders who have helped shape Vancouver’s most enduring institutions—including Science World</p>
