--- a/index.html
+++ b/index.html
@@ -181,6 +181,10 @@ Celebrates 30 Years Under the Dome and Across the Province.">
 					<img src="images/slider_10.jpg" alt="slider 10" />
 				</li>
 
+				<li data-target="#thumbnail_image_left_carousel" data-slide-to="10">
+					<img src="images/slider_11.jpg" alt="slider 11" />
+				</li>
+
 			</ol>
 
 			<!-- Wrapper for slides -->
@@ -284,6 +288,16 @@ Celebrates 30 Years Under the Dome and Across the Province.">
 						<h1>Peter M. Brown</h1>
 						<p>Financier Peter M. Brown comes from a long line of city builders who have helped shape Vancouver’s most enduring institutions—including Science World</p>
 					</br><a href="Brown.html">Read the Interview</a>
+					</div>
+				</div>
+
+				<!--========= Eleventh Slide =========-->
+				<div class="carousel-item">
+					<img src="images/slider_11.jpg" alt="slider 10" />
+					<div class="carousel-caption thumbnail_image_left_carousel_caption">
+						<h1>Max Donelan-Cloud</h1>
+						<p>SFU professor Max Donelan-Cloud studies how and why people move. In his personal life, he credits Science World with keeping his three young girls moving — and learning</p>
+					</br><a href="Max.html">Read the Interview</a>
 					</div>
 				</div>
 
