--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ Celebrates 30 Years Under the Dome and Across the Province.">
 					<div class="carousel-caption thumbnail_image_left_carousel_caption">
 						<h1>Cybele Negris</h1>
 						<p>Cybele Negris, a member of Science World’s Chair’s Council, is helping to ignite a passion for science in young girls</p>
-					</br><a href="Cybele.html">Read the Interview</a>
+					</br><a href="Cybele.html" class="noSwipe">Read the Interview</a>
 					</div>
 				</div>
 
@@ -207,7 +207,7 @@ Celebrates 30 Years Under the Dome and Across the Province.">
 					<div class="carousel-caption thumbnail_image_left_carousel_caption">
 						<h1>Barbara Brink</h1>
 						<p>For Barbara Brink, founding CEO and Chair of Science World, the organization has always been about much more than putting on exhibits.</p>
-					</br><a href="Barbara.html">Read the Interview</a>
+					</br><a href="Barbara.html" class="noSwipe">Read the Interview</a>
 					</div>
 				</div>
 
@@ -217,7 +217,7 @@ Celebrates 30 Years Under the Dome and Across the Province.">
 					<div class="carousel-caption thumbnail_image_left_carousel_caption">
 						<h1>Bob and Lily Lee</h1>
 						<p>Bob and Lily Lee, two of BC’s philanthropists, believe that creating prosperity starts with making a commitment to education and youth</p>
-					</br><a href="Lees.html">Read the Interview</a>
+					</br><a href="Lees.html" class="noSwipe">Read the Interview</a>
 					</div>
 				</div>
 
@@ -227,7 +227,7 @@ Celebrates 30 Years Under the Dome and Across the Province.">
 					<div class="carousel-caption thumbnail_image_left_carousel_caption">
 						<h1>Alan Winter</h1>
 						<p>B.C. Innovation Commissioner Alan Winter has led some of the province’s top tech institutions, and credits Sputnik — and the wonders of space — for sparking his interest in science</p>
-					</br><a href="Alan.html">Read the Interview</a>
+					</br><a href="Alan.html" class="noSwipe">Read the Interview</a>
 					</div>
 				</div>
 
@@ -237,7 +237,7 @@ Celebrates 30 Years Under the Dome and Across the Province.">
 					<div class="carousel-caption thumbnail_image_left_carousel_caption">
 						<h1>Haig Farris</h1>
 						<p>Venture capitalist Haig Farris, who was pivotal in securing funding for Science World 30 years ago, is seeing his decades-long efforts paying off in Vancouver’s thriving tech community</p>
-					</br><a href="Haig.html">Read the Interview</a>
+					</br><a href="Haig.html" class="noSwipe">Read the Interview</a>
 					</div>
 				</div>
 
@@ -247,7 +247,7 @@ Celebrates 30 Years Under the Dome and Across the Province.">
 					<div class="carousel-caption thumbnail_image_left_carousel_caption">
 						<h1>Jim Pattison</h1>
 						<p>B.C. business legend Jim Pattison, who helped deliver Expo 86 and change the province forever, sees a bright future for one of Expo’s greatest legacies: Science World</p>
-					</br><a href="Jim.html">Read the Interview</a>
+					</br><a href="Jim.html" class="noSwipe">Read the Interview</a>
 					</div>
 				</div>
 
@@ -257,7 +257,7 @@ Celebrates 30 Years Under the Dome and Across the Province.">
 					<div class="carousel-caption thumbnail_image_left_carousel_caption">
 						<h1>Launi Skinner</h1>
 						<p>CEO of First West Credit Union and chair of the Science World Board, believes that Science World can connect with the leaders of tomorrow in several ways</p>
-					</br><a href="Launi.html">Read the Interview</a>
+					</br><a href="Launi.html" class="noSwipe">Read the Interview</a>
 					</div>
 				</div>
 
@@ -267,7 +267,7 @@ Celebrates 30 Years Under the Dome and Across the Province.">
 					<div class="carousel-caption thumbnail_image_left_carousel_caption">
 						<h1>Paige Zheng</h1>
 						<p>A resident psychiatrist at St Paul’s Hospital, credits her time as a Science World intern with inspiring her to pursue a career in science</p>
-					</br><a href="Paige.html">Read the Interview</a>
+					</br><a href="Paige.html" class="noSwipe">Read the Interview</a>
 					</div>
 				</div>
 
@@ -277,7 +277,7 @@ Celebrates 30 Years Under the Dome and Across the Province.">
 					<div class="carousel-caption thumbnail_image_left_carousel_caption">
 						<h1>Rob Lunde</h1>
 						<p>Whether curating Science World’s biggest exhibits or hosting the biggest celebrities, Rob Lunde is consistently focused on making science stick in the minds of his audience through emotional connections</p>
-					</br><a href="Rob.html">Read the Interview</a>
+					</br><a href="Rob.html" class="noSwipe">Read the Interview</a>
 					</div>
 				</div>
 
@@ -287,7 +287,7 @@ Celebrates 30 Years Under the Dome and Across the Province.">
 					<div class="carousel-caption thumbnail_image_left_carousel_caption">
 						<h1>Peter M. Brown</h1>
 						<p>Financier Peter M. Brown comes from a long line of city builders who have helped shape Vancouver’s most enduring institutions—including Science World</p>
-					</br><a href="Brown.html">Read the Interview</a>
+					</br><a href="Brown.html" class="noSwipe">Read the Interview</a>
 					</div>
 				</div>
 
@@ -297,7 +297,7 @@ Celebrates 30 Years Under the Dome and Across the Province.">
 					<div class="carousel-caption thumbnail_image_left_carousel_caption">
 						<h1>Max Donelan-Cloud</h1>
 						<p>SFU professor Max Donelan-Cloud studies how and why people move. In his personal life, he credits Science World with keeping his three young girls moving — and learning</p>
-					</br><a href="Max.html">Read the Interview</a>
+					</br><a href="Max.html" class="noSwipe">Read the Interview</a>
 					</div>
 				</div>
 
@@ -324,7 +324,7 @@ Celebrates 30 Years Under the Dome and Across the Province.">
 									<div class="commerce_columns_item_caption">
 										<h3>Girls and STEAM</h3>
 										<p>Empowering girls to pursue their STEAM passions through workshops, speakers and mentors. A symposium and showcase that empowers girls to pursue their STEAM passions through workshops, speakers and mentors.</p>
-										</br><a href="https://www.scienceworld.ca/girls-steam">Find Out More</a>
+										</br><a href="https://www.scienceworld.ca/girls-steam" class="noSwipe">Find Out More</a>
 									</div>
 								</div>
 							</div>
@@ -341,7 +341,7 @@ Celebrates 30 Years Under the Dome and Across the Province.">
 										<div class="commerce_columns_item_caption">
 										<h3>Future Science Leaders</h3>
 										<p>Inspiring and challenging top students to excel in science and innovation through programming from and networking with BC’s top science, technology and business leaders, and peers.</p>
-										</br><a href="https://www.scienceworld.ca/futurescienceleaders">Find Out More</a>
+										</br><a href="https://www.scienceworld.ca/futurescienceleaders" class="noSwipe">Find Out More</a>
 									</div>
 								</div>
 							</div>
@@ -358,7 +358,7 @@ Celebrates 30 Years Under the Dome and Across the Province.">
 								<div class="commerce_columns_item_caption">
 									<h3>Symbiosis</h3>
 									<p>Canada's first STEAM Learning Ecosystem to scale science literacy across BC by providing quality STEAM learning opportunities for all children and youth, regardless of geography, ethnicity or family income.</p>
-									</br><a href="http://www.symbiosis.ca">Find Out More</a>
+									</br><a href="http://www.symbiosis.ca" class="noSwipe">Find Out More</a>
 								</div>
 								</div>
 							</div>
