Adding Lynn Westcott interview

--- a/Max.html
+++ b/Max.html
@@ -114,6 +114,7 @@
 
 				<a href="index.html#interviews" class="button_sub">Back</a></br></br>
 				<a href="Brown.html" class="button_sub">Previous: Peter M. Brown</a>&nbsp;&nbsp;&nbsp;
+				<a href="Lynn.html" class="button_sub">Next: Lynn Westcott</a>			
 			</div>
 		</div>
 </div>
