--- a/index.html
+++ b/index.html
@@ -185,6 +185,10 @@ Celebrates 30 Years Under the Dome and Across the Province.">
 					<img src="images/slider_11.jpg" alt="slider 11" />
 				</li>
 
+				<li data-target="#thumbnail_image_left_carousel" data-slide-to="11">
+					<img src="images/slider_12.jpg" alt="slider 12" />
+				</li>
+
 			</ol>
 
 			<!-- Wrapper for slides -->
@@ -298,6 +302,16 @@ Celebrates 30 Years Under the Dome and Across the Province.">
 						<h1>Max Donelan-Cloud</h1>
 						<p>SFU professor Max Donelan-Cloud studies how and why people move. In his personal life, he credits Science World with keeping his three young girls moving — and learning</p>
 					</br><a href="Max.html" class="noSwipe">Read the Interview</a>
+					</div>
+				</div>
+
+				<!--========= Twelfth Slide =========-->
+				<div class="carousel-item">
+					<img src="images/slider_12.jpg" alt="slider 10" />
+					<div class="carousel-caption thumbnail_image_left_carousel_caption">
+						<h1>Lynn Westcott</h1>
+						<p>Entomologist Lynn Westcott, a volunteer with Science World’s Scientists and Innovators in the Schools program, finds inspiration in nature, and she inspires others to do the same</p>
+					</br><a href="Lynn.html" class="noSwipe">Read the Interview</a>
 					</div>
 				</div>
 
